# local-code-graph

./: .env.sample  .gitignore  .indexingignore  README.md  SECURITY.md  app.py  config.py  llm_benchmark.md  main.py  plan.md  pyproject.toml  run_test.py  start.sh
agents/: graph.py  nodes.py  state.py  tools.py
api/: middleware.py
api/routes/: health.py  ingest.py  query.py
core/: assembler.py  ast_parser.py  ast_searcher.py  config_extractor.py  librarian.py  scanner.py  universal_parser.py  vector_operations.py
intelligence_layer/: analyst.py  kernel_client.py  prompts.py  query_engine.py
models/: llm_output.py  query_llm.py  request.py
my_mock_test/: data_loader.py  model.py
services/: ingestion_service.py
tests/: test_ast_searcher.py  test_markdown_parser.py
ui/: graph_template.py
utils/: constants.py  exception_handler.py  global_cache.py  graph_viewer.py  helper.py  logger.py
