[project]
name = "local-code-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "huggingface-hub>=1.18.0",
    "leidenalg>=0.12.0",
    "llama-cpp-python>=0.3.28",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "openai>=1.109.1",
    "pathspec>=1.1.1",
    "pydantic>=2.10.4,<2.12",
    "pydantic-settings>=2.6.1,<2.12",
    "python-igraph>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "semantic-kernel>=1.16.0",
    "streamlit>=1.57.0",
    "streamlit-agraph>=0.0.45",
    "streamlit-autorefresh>=1.0.1",
    "tenacity>=9.1.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-swift>=0.7.3",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.47.0",
]
